--- a/Views/Meeting/Index.cshtml
+++ b/Views/Meeting/Index.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewBag.Title="Toplantı Özeti";
+}
 <h1 class="h4">toplantı özeti</h1>
 <p>toplantıya sizinle birlikte 20 kişi katılıyor</p>
 <a class="btn btn-sm btn-outline-primary" href="#">katılımcıları listele</a>
