--- a/Views/Meeting/List.cshtml
+++ b/Views/Meeting/List.cshtml
@@ -1,31 +1,34 @@
 @{
     ViewBag.Title="Toplantı Katılım Listesi";
 }
-<h1 class="h4">Toplantı Katılım Listesi</h1>
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <td>Ad</td>
-            <td>Katılım durumu</td>
-            <td>Detay</td>
-        </tr>
-    </thead>
-    <body>
-        <tr>
-            <td>Cahide Nur Yalçın</td>
-            <td>info@cahidenuryalcin.com</td>
-            <td>Evet</td>
-            <td>
-                <a class="btn btn-sm btn-primary" href="#">Detay</a>
-            </td>
-        </tr>
-        <tr>
-            <td>Menes Gökgün</td>
-            <td>info@menes.com</td>
-            <td>Evet</td>
-            <td>
-                <a class="btn btn-sm btn-primary" href="#">Detay</a>
-            </td>
-        </tr>
-    </body>
-</table>
+<main class="text-center">
+
+    <h1 class="h4">Toplantı Katılım Listesi</h1>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <td>Ad</td>
+                <td>Katılım durumu</td>
+                <td>Detay</td>
+            </tr>
+        </thead>
+        <body>
+            <tr>
+                <td>Cahide Nur Yalçın</td>
+                <td>info@cahidenuryalcin.com</td>
+                <td>Evet</td>
+                <td>
+                    <a class="btn btn-sm btn-primary" href="#">Detay</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Menes Gökgün</td>
+                <td>info@menes.com</td>
+                <td>Evet</td>
+                <td>
+                    <a class="btn btn-sm btn-primary" href="#">Detay</a>
+                </td>
+            </tr>
+        </body>
+    </table>
+</main>
